--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,35 @@ services:
       - "8080:80"
     networks:
       - website_network
+    depends_on:
+      - backend
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
+  backend:
+    build: ./backend/contact
+    container_name: alejandroroa-backend
+    restart: unless-stopped
+    ports:
+      - "3001:3001"
+    networks:
+      - website_network
+    environment:
+      - PORT=3001
+      - ALLOWED_ORIGIN=https://alejandroroa.engineer
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_SECURE=${SMTP_SECURE}
+      - SMTP_USER=${SMTP_USER}
+      - SMTP_PASS=${SMTP_PASS}
+      - TO_EMAIL=${TO_EMAIL}
+      - HONEYPOT_FIELD=${HONEYPOT_FIELD}
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3001/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
