--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,16 +24,11 @@ services:
       - "3001:3001"
     networks:
       - website_network
+    env_file:
+      - .env.backend
     environment:
       - PORT=3001
       - ALLOWED_ORIGIN=https://alejandroroa.engineer
-      - SMTP_HOST=${SMTP_HOST}
-      - SMTP_PORT=${SMTP_PORT}
-      - SMTP_SECURE=${SMTP_SECURE}
-      - SMTP_USER=${SMTP_USER}
-      - SMTP_PASS=${SMTP_PASS}
-      - TO_EMAIL=${TO_EMAIL}
-      - HONEYPOT_FIELD=${HONEYPOT_FIELD}
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3001/api/health"]
       interval: 30s
