--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8080:80"
     networks:
       - website_network
+      - chat_chatbot-network  # Conectar a la red del chatbot
     depends_on:
       - backend
     healthcheck:
@@ -40,3 +41,5 @@ services:
 networks:
   website_network:
     driver: bridge
+  chat_chatbot-network:
+    external: true  # Red externa creada por el chatbot
