--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,6 +22,26 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    # Proxy chatbot requests to RAG API
+    location /chat {
+        proxy_pass http://rag-api:8000/chat;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 90s;
+        proxy_connect_timeout 90s;
+        proxy_send_timeout 90s;
+    }
+
+    # Health check for chatbot
+    location /health {
+        proxy_pass http://rag-api:8000/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+    }
+
     # Gzip compression
     gzip on;
     gzip_vary on;
